--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,7 +33,8 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.4.0'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
+    implementation "androidx.constraintlayout:constraintlayout:2.1.2"
+    implementation "androidx.constraintlayout:constraintlayout-compose:1.0.0-rc02"
     implementation 'com.google.firebase:firebase-auth:19.2.0'
     implementation 'com.google.firebase:firebase-database:19.2.1'
     implementation platform('com.google.firebase:firebase-bom:29.0.3')
